--- a/src/Assignment-1/assignment1.css
+++ b/src/Assignment-1/assignment1.css
@@ -9,7 +9,7 @@ body{
     padding: 0;
 }
 
-.container, .content{
+#container, .content{
     height: 100%;
     width: 100%;
 }
@@ -48,9 +48,9 @@ img{
 .list1{
     position: absolute;
     font-size: 32px;
-    font-family: spooky;
+    font-family: cursive;
     list-style: square;
-    padding: 0 0 0 15%;
+    padding: 0 0 0 14%;
     font-style: italic;
 }
 
@@ -59,7 +59,7 @@ img{
 }
 
 h1{
-    font-family: cursive;
+    font-family: spooky;
     font-size: 50px;
     padding: 5% 0 0 10%;
     font-style: italic;
