--- a/src/Assignment-5/assignment5.css
+++ b/src/Assignment-5/assignment5.css
@@ -1,7 +1,63 @@
 /* Our CSS file. */
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html{
+    height: 100vh;
+    background-color: #d3d3d3;
+}
 
 .container, .content {
-width: 100%;
-height: 100%;
+    height: 100%;
+}
+
+img{
+    height: 300px;
+    width: 348px;
+    position: relative;
+    margin: 0 -20px;
+}
+
+.image-1{
+    bottom: 30px;
+}
+
+.card{
+    display: flex;
+    margin: 50px 40px;
+}
+
+.text-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 75%;
+    padding: 0 70px;
+    background-color: #fff;
+}
+
+h1 {
+    font-size: 45px;
+}
+
+p {
+    font-size: 24px;
+}
+
+button {
+    width: 175px;
+    height: 54px;
+    border: none;
+    background: #6cc704;
+    border-radius: 38px;
+    font-size: larger;
+    color: #fff;
+}
+
+.images {
+    background-color: #6cc704;
 }
